tests/exprs/tstmtexp.nim
discard """
  file: "tstmtexp.nim"
  line: 8
  errormsg: "expression '5' is of type 'int literal(5)' and has to be discarded"
"""
# Test 3

1+4

